RESOLVED FIXED80455
Get ScrollAnimatorNone to handle the stop and reverse cases.
https://bugs.webkit.org/show_bug.cgi?id=80455
Summary Get ScrollAnimatorNone to handle the stop and reverse cases.
Scott Byer
Reported 2012-03-06 16:46:50 PST
Get ScrollAnimatorNone to handle the stop and reverse cases.
Attachments
Patch (23.94 KB, patch)
2012-03-06 16:54 PST, Scott Byer
no flags
Scott Byer
Comment 1 2012-03-06 16:54:52 PST
Nat Duca
Comment 2 2012-03-06 17:01:54 PST
Comment on attachment 130475 [details] Patch Does this collide with wjmaclean's refactoring into curves?
Scott Byer
Comment 3 2012-03-06 17:07:39 PST
This patch doesn't collide with the current version of his refactoring patch.
W. James MacLean
Comment 4 2012-03-07 05:16:14 PST
(In reply to comment #3) > This patch doesn't collide with the current version of his refactoring patch. Having had a chance to look it over, I don't foresee the two patches colliding at all.
James Robinson
Comment 5 2012-03-07 11:43:45 PST
Comment on attachment 130475 [details] Patch R=me
WebKit Review Bot
Comment 6 2012-03-07 13:13:46 PST
Comment on attachment 130475 [details] Patch Clearing flags on attachment: 130475 Committed r110093: <http://trac.webkit.org/changeset/110093>
WebKit Review Bot
Comment 7 2012-03-07 13:13:50 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.