Get ScrollAnimatorNone to handle the stop and reverse cases. https://bugs.webkit.org/show_bug.cgi?id=80455

Patch by Scott Byer <scottbyer@chromium.org> on 2012-03-07
Reviewed by James Robinson.

Source/WebCore:

Chromium webkit_unit_tests ScrollAnimatorNoneTest.ScrollStopInMiddle and
ScrollAnimatorNoneTest.ReverseInMiddle.

* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::PerAxisData::updateDataFromParameters):

Source/WebKit/chromium:

* tests/ScrollAnimatorNoneTest.cpp:
(ScrollAnimatorNoneTest::updateDataFromParameters):
(TEST_F):

Canonical link: https://commits.webkit.org/97707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110093 268f45cc-cd09-0410-ab3c-d52691b4dbfc